# FastCCC

./: .gitignore  README.md  fastccc_demo.ipynb  fastcci_demo.ipynb  fastcci_tutorial.ipynb  pyproject.toml
.github/workflows/: pages.yml
db/: ensembl_hgnc_Homo_sapiens.GRCh38.112.csv
db/CellChatv1.6.1/: complex_composition_table.csv  complex_table.csv  gene_table.csv  interaction_table.csv  protein_table.csv
db/NicheNetv1.1.1/: gene_table.csv  interaction_table.csv  protein_table.csv
db/NicheNetv2.1.5/: complex_table.csv  gene_table.csv  interaction_table.csv  protein_table.csv
docs/: _config.yml  cccref.md  exp.md  index.md  install.md  licence.md  license.md  sim.md  toolkits.md  usage.md
docs/cccref/: cccref.md  func.md  input.md  output.md  snippet.md
docs/exp/: apply_to_atlas.md  apply_with_ref.md  benchmark.md  exp.md
docs/usage/: func.md  input.md  output.md  snippet.md  usage.md
fastccc/: __init__.py  build_reference.py  cauchy_combine.py  ccc_utils.py  core.py  dist_complex.py  distrib.py  infer_query.py
fastcci/: 0.01index_mat.npy  __init__.py  build_reference.py  cauchy_combine.py  ccc_utils.py  core.py  delete-core.py  distrib.py  distrib_digit.py  infer_query.py  preprocess.py  score.py
reference/adipose/: basic_info_dict.pkl  complex_table.pkl  config.toml  interactions.pkl  ref_hk.txt  ref_mean_counts.pkl  ref_percents.pkl
reference/blood/: basic_info_dict.pkl  complex_table.pkl  config.toml  interactions.pkl  ref_hk.txt  ref_mean_counts.pkl  ref_percents.pkl
reference/bone_marrow/: basic_info_dict.pkl  complex_table.pkl  ref_hk.txt  (+4 more)
(+110 files in other folders)
