[tool.poetry]
name = "fastcci"
version = "0.1.0"
description = ""
authors = ["Svvord <cchousiyu@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24"
pandas = "^2.2.3"
scipy = "^1.14.1"
scanpy = "^1.10.3"
loguru = "^0.7.2"
openpyxl = "^3.1.5"
gseapy = "^1.1.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
